[NMOD-7652] Attempting to fix the BMP issue: - Not connecting to BMP server everytime in the loop - Extra debugs

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -33,4 +33,4 @@ COPY ${CONFIG_FILE} /etc/gobgp/gobgp.conf
 
 WORKDIR /go
 
-CMD ["/usr/local/bin/gobgpd", "-f", "/etc/gobgp/gobgp.conf", "-p"]
+CMD ["/usr/local/bin/gobgpd", "-f", "/etc/gobgp/gobgp.conf","--log-level=debug", "-p"]
