--- a/docker/config.ls.bmp.toml
+++ b/docker/config.ls.bmp.toml
@@ -8,7 +8,7 @@
   [bmp-servers.config]
     address = "gobmp"
     port = 5000 
-    route-monitoring-policy = "all"
+    route-monitoring-policy = "local-rib"
     #statistics-timeout = 60
 
 [[neighbors]]
